--- a/src/components/engine/engine.module.scss
+++ b/src/components/engine/engine.module.scss
@@ -3,21 +3,37 @@
 	background-color: #568cd2;
 	height: 100vh;
 	width: 100vw;
-    overflow: hidden;
-    background-image: url('../../assets/img/16552.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+	overflow: hidden;
+	background-image: url('../../assets/img/16552.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.score {
+	position: absolute;
+	width: 150px;
+	height: 30px;
+	left: 50px;
+	top: 50px;
+	background: #a19855fa;
+	color: white;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 5px solid #544a27;
+	border-radius: 10px;
+	box-shadow: 1px 1px 5px black;
 }
 
 .character {
 	position: absolute;
 	display: block;
-    height: 170px;
-    width: 100px;
+	height: 170px;
+	width: 100px;
 	bottom: 0px;
 	left: 0px;
-	background-color: #ffd600;
 }
 
 .stage {
@@ -32,9 +48,15 @@
 .block {
 	position: absolute;
 	display: block;
-	height: 200px;
+	height: 236px;
 	width: 80px;
 	bottom: 0;
 	left: 0;
-	background-color: red;
+	img {
+		height: 250px;
+		margin: 0 auto;
+		bottom: 7px;
+		right: 126px;
+		position: relative;
+	}
 }
